crates/uitest/fixtures/mir_check/move_view_param_generic.snap
---
source: crates/uitest/tests/mir_check.rs
assertion_line: 32
expression: res
input_file: fixtures/mir_check/move_view_param_generic.fe
---
error[10-0002]: move conflict in `fn make_pair`
  ┌─ move_view_param_generic.fe:2:6
  │
2 │     (a, b)
  │      ^  ^ cannot move out of a view parameter
  │      │   
  │      cannot move out of a view parameter
